Fixed aligning for archive tiles

--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -5,7 +5,7 @@
 .comic-tile {
     color: black;
 
-    margin: 20pt;
+    margin: 15pt 5pt;
     padding: 5pt;
     border-style: solid;
     border-width: 2pt;
@@ -18,8 +18,6 @@
 
     display: inline-grid;
     float: none;
-    /* inline-block space fix */
-    margin-right:-4px;
 
     .comic-title {
         font-size: 15pt;
